<resources>
    <string name="app_name">Shopping app v3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="dummy_cart_total">200$</string>
    <string name="checkout">CHECKOUT</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="one_stop_shop">ONE STOP SHOP</string>
    <string name="home_image">home_image</string>
    <string name="app_logo">app_logo</string>
    <string name="shopping_app">SHOPPING APP</string>
    <string name="continue_splash">Continue</string>
    <string name="dummy_product_name">Royal Shirt</string>
    <string name="prod_detail_rating">rating</string>
    <string name="product_detail_image">product detail image</string>
    <string name="prod_detail_price">200$</string>
    <string name="save_100">(save 100$)</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="prod_detail_description">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet porta sem, a aliquet risus. Donec quis dolor arcu. Praesent sagittis ut nisi eget dictum.</string>
    <string name="prod_detail_description_expand">Fit Type: slim fit\nColor name: Navy\nMaterial: Cotton</string>
    <string name="card_product_image">card product image</string>
    <string name="card_product_name">Product name</string>
    <string name="card_prod_description">description</string>
    <string name="card_prod_price">200$</string>
    <string name="card_add_to_cart">card - add to cart</string>
    <string name="cart_product_image">cart product image</string>
    <string name="cart_product_name">Product name</string>
    <string name="cart_prod_description">description</string>
    <string name="cart_prod_price">200$</string>
    <string name="cart_prod_increment">increment</string>
    <string name="cart_prod_quantity">1</string>
    <string name="cart_prod_decrement">decrement</string>
    <string name="cart_prod_delete">delete</string>
    <string name="home_category_image">category image</string>
    <string name="home_category_text">Shirt</string>
    <string name="menu">menu</string>
    <string name="shopping_app_normal">Shopping App</string>
    <string name="no_data">No Data</string>
    <string name="category_type">Category type</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="detail">Detail</string>
    <string name="added_to_the_cart">Added to the cart</string>
    <string name="Add_to_cart">Add to cart</string>
    <string name="_99">99</string>
    <string name="all">All</string>
    <string name="electronic">Electronic</string>
    <string name="clothing">Clothing</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="price_range">Price range</string>
    <string name="below_300">below 300</string>
</resources>