<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cartProdImg"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/shirt"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cart_product_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/cartProdName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_product_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cartProdDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/cart_prod_description"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/cartProdPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cart_prod_price"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/cartQuantDec"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:padding="5dp"
                    app:tint="@color/black"
                    android:src="@drawable/ic_remove"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cart_prod_decrement" />

                <EditText
                    android:id="@+id/cartProdQuant"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:text="@string/cart_prod_quantity"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:autofillHints="1"
                    tools:ignore="LabelFor" />


                <ImageView
                    android:id="@+id/cartQuantInc"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:padding="5dp"
                    android:src="@drawable/plus"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cart_prod_increment" />


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/cartProdDel"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="10dp"
            android:src="@drawable/delete"
            android:contentDescription="@string/cart_prod_delete" />

    </LinearLayout>

</androidx.cardview.widget.CardView>