<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.home.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/curve_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="60dp"
                android:text="@string/one_stop_shop"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:contentDescription="@string/home_image"
                android:src="@drawable/shopping_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/homeCategoryType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/category_type"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <RadioGroup
                android:id="@+id/categoryRadioGroup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/homeCategoryType"
                app:layout_constraintTop_toBottomOf="@+id/homeCategoryType">

                <RadioButton
                    android:id="@+id/allButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_radio_btn"
                    android:button="@null"
                    android:checked="true"
                    android:elevation="5dp"
                    android:padding="15dp"
                    android:text="@string/all"
                    android:textColor="@drawable/radio_btn_text_color" />

                <RadioButton
                    android:id="@+id/clothingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_radio_btn"
                    android:button="@null"
                    android:elevation="5dp"
                    android:padding="15dp"
                    android:text="@string/clothing"
                    android:textColor="@drawable/radio_btn_text_color" />

                <RadioButton
                    android:id="@+id/electronicButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_radio_btn"
                    android:button="@null"
                    android:elevation="5dp"
                    android:padding="15dp"
                    android:text="@string/electronic"
                    android:textColor="@drawable/radio_btn_text_color" />

            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleViewProductCardApi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/categoryRadioGroup"
                tools:itemCount="2"
                tools:listitem="@layout/card_product_api" />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:src="@drawable/filter"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>